--- a/user/templates/user/invoice.html
+++ b/user/templates/user/invoice.html
@@ -3,25 +3,16 @@
 <html lang="en" >
 
 <head>
-  <meta charset="UTF-8">
+  {% comment %} <meta charset="UTF-8"> {% endcomment %}
   
 
-    <link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" />
+    {% comment %} <link rel="apple-touch-icon" type="image/png" href="https://cpwebassets.codepen.io/assets/favicon/apple-touch-icon-5ae1a0698dcc2402e9712f7d01ed509a57814f994c660df9f7a952f3060705ee.png" /> {% endcomment %}
 
-    <meta name="apple-mobile-web-app-title" content="CodePen">
+      
 
-    <link rel="shortcut icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/favicon-aec34940fbc1a6e787974dcd360f2c6b63348d4b1f4e06c77743096d55480f33.ico" />
+  <title>Invoice</title>
 
-    <link rel="mask-icon" type="image/x-icon" href="https://cpwebassets.codepen.io/assets/favicon/logo-pin-b4b4269c16397ad2f0f7a01bcdf513a1994f4c94b8af2f191c09eb0d601762b1.svg" color="#111" />
-
-
-
-  
-  
-
-  <title>CodePen - Invoice Template</title>
-
-    <link rel="canonical" href="https://codepen.io/YikesItsMikes/pen/bdBQJR">
+    {% comment %} <link rel="canonical" href="https://codepen.io/YikesItsMikes/pen/bdBQJR"> {% endcomment %}
   
   
   
@@ -231,7 +222,7 @@ form{
       </div>
 
       <div id="project">
-        <h2>Project Description</h2>
+        <h2>Service Description</h2>
         <p>{{ item.description }}</p>
       </div>   
 
